# AssetsDAO

./: .env  .env.dev  .env.local  .env.prod  .env.test  .gitignore  Cargo.toml  README.md  canister_ids.json  dfx.json  package-lock.json  package.json  start-local.sh
.github/: copilot-instructions.md
canisters/staking/: Cargo.toml
canisters/staking/src/: guard_keys.rs  init.rs  lib.rs  memory_ids.rs
canisters/staking/src/account/: badge_utils.rs  client_api.rs  client_transport_structures.rs  crud_utils.rs  guard_keys.rs  mod.rs  operation_utils.rs  stable_structures.rs  temp_api.rs  transport_structures.rs
canisters/staking/src/account/recovery_errors/: mod.rs  recover_dissolve.rs  recover_early_unstake.rs  recover_stake.rs
canisters/staking/src/event_log/: mod.rs  stable_structures.rs  stake_and_unstake_events.rs  stake_reward_events.rs  staking_account_events.rs  staking_pool_events.rs  transfer_events.rs  transport_structures.rs
canisters/staking/src/nns/: mod.rs  stable_structures.rs  transport_structures.rs
canisters/staking/src/nns/utils/: ledger_canister.rs  ledger_utils.rs  mod.rs  nns_query.rs  nns_update.rs
canisters/staking/src/on_chain/: address.rs  mod.rs  query.rs  transfer.rs
canisters/staking/src/pool/: client_api.rs  client_transport_structures.rs  crud_utils.rs  mod.rs  stable_structures.rs  transport_structures.rs
canisters/staking/src/pool_transaction_record/: mod.rs  stable_structures.rs  transport_structures.rs  utils.rs
canisters/staking/src/reward/: crud.rs  mod.rs  stable_key.rs  stable_structures.rs  transport_structures.rs  utils.rs
canisters/staking/src/scheduled_tasks/: mod.rs  nns_neuron_check_task.rs  nns_neuron_tasks.rs  reward_distribution_task.rs  stake_error_recovery_task.rs  unstake_account_task.rs
canisters/staking/src/subscription/: mod.rs  stable_structures.rs  transport_structures.rs
deploy-tools/: ic-env-switch.mjs
libraries/types/: Cargo.toml
libraries/types/src/: btree_set_entity_index.rs  date.rs  entities.rs  lib.rs  pagination.rs  stable_structures.rs
libraries/types/src/assets_management/: mod.rs
libraries/types/src/nns/: mod.rs  neuron.rs  neuron_info.rs
libraries/types/src/on_chain/: mod.rs
libraries/types/src/product/: mod.rs
libraries/types/src/product/base/batch/: mod.rs  stable_structures.rs
libraries/types/src/product/instant_win/: mod.rs
libraries/types/src/product/instant_win/batch/: mod.rs  quick_quid_stable_structures.rs  quick_quid_transport_structures.rs  stable_structures.rs  transport_structures.rs
libraries/types/src/product/instant_win/configs/: mod.rs  stable_structures.rs  transport_structures.rs
libraries/types/src/product/instant_win/order/: mod.rs  stable_structures.rs
libraries/types/src/product/instant_win/record/: stable_structures.rs  transport_structures.rs
libraries/types/src/staking/: mod.rs
libraries/types/src/sys/: config.rs  mod.rs
libraries/types/src/sys/dict/: mod.rs  stable_structures.rs  transfer_structures.rs
(+32 files in other folders)
