[package]
name = "staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true}
ic-cdk-timers = { workspace = true}
ic-stable-structures = { workspace = true }


ic-ledger-types={ workspace = true }
sha2 = { workspace = true }

serde = { workspace = true }
serde_bytes = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }

bigdecimal = { workspace = true }
num-bigint = { workspace = true }
chrono = { workspace = true }
scopeguard = { workspace = true }

types = { path = "../../libraries/types" }
system_configs_macro = { path = "../../libraries/system_configs_macro" }
common_canisters = { path = "../../libraries/common_canisters" }
parallel_guard_macro = { path = "../../libraries/parallel_guard_macro" }
nns_governance_api = { path = "../../libraries/nns_governance_api" }
identity_mapping_macro = { path = "../../libraries/identity_mapping_macro" }
